Fix spacing and responsive based on code review.
- Made navbar fixed on top after scroll.
- footer logo and social icons aligment fixed.
- fixed the height of subscribe and newsletter section on large screen.
- provided some spacing to first image of in the magzine.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -19,6 +19,24 @@ body {
   opacity: 0.75;
 }
 
+/* for fixed navbar style */
+#navbar.fixed-top .info,
+#navbar.fixed-top #sideMenu {
+  display: none!important;
+}
+
+#navbar.fixed-top .navbar-brand img {
+  width: 132px;
+}
+
+#navbar.fixed-top .main-navbar {
+  padding: 10px!important;
+}
+
+#navbar.fixed-top .navbar-toggler {
+  display: block;
+}
+
 .top-navbar {
   top: -10px;
   width: 90%;
@@ -145,6 +163,14 @@ body {
   height: unset;
 }
 
+#tumbler-icon {
+  transform: scale(1.4);
+}
+
+.footer-logo {
+  max-width: 236px;
+}
+
 @media (min-width: 481px) {
   .article-3 .stories-img-wrapper {
     flex: 0 0 258px;
@@ -219,6 +245,11 @@ body {
 
   #editors-pick img {
     height: 140px;
+  }
+
+  .newsletter-container,
+  .subscribe-container {
+    min-height: 360px;
   }
 }
 
